--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.13.7
+  linkedin_login: ^1.1.5
 
 dev_dependencies:
   flutter_test:
