--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,14 @@ dependencies:
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.13.7
   linkedin_login: ^1.1.5
+  file_picker: 1.4.3+1
+  firebase_storage: 3.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
- 
+  
+
 
 
 # For information on the generic Dart part of this file, see the
