--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.13.7
   linkedin_login: ^1.1.5
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
