--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cloud_firestore: ^0.13.7
   linkedin_login: ^1.1.5
   shared_preferences: ^0.5.7+3
+  hexcolor: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
